--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,6 +9,14 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+p {
+  font-size: 14px;
+}
+
 h1 {
   border-bottom: 1.25px solid #d3d3d3;
+}
+
+h1.title {
+  border-bottom: 0px;
 }
