--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,16 +7,20 @@
 
 body {
   font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px;
 }
 
-p {
-  font-size: 14px;
-}
 
 h1 {
   border-bottom: 1.25px solid #d3d3d3;
+  font-size: 28px;
+}
+
+h2 {
+  font-size: 1.5em;
 }
 
 h1.title {
   border-bottom: 0px;
+  font-size: 32px;
 }
