--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,8 +16,8 @@
       <header>
         <h1 class = "title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
-        {% if site.subtitle %}
-        <p> {{ site.subtitle }} </p>
+        {% if site.author %}
+        <p><a href = "https://lrdegeest.github.io/"> {{ site.author }}</a> </p>
         {% endif %}
         
         {% if site.logo %}
@@ -41,6 +41,7 @@
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://lrdegeest.github.io/">Author <strong>Homepage</strong></a></li>
         </ul>
         {% endif %}
       </header>
